--- a/Steck_Aufgabe1.html
+++ b/Steck_Aufgabe1.html
@@ -73,5 +73,7 @@ Gesuchte Funktionsgleichung:
  
 <span style="color:red">f<sub>(x)</sub> = -1,25x<sup>2</sup> + x</span>
 
+</b></p></pre></body></html>
+
 
 
