--- a/Steck_Aufgabe1.html
+++ b/Steck_Aufgabe1.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe1.jpg" >
  
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
