--- a/Steck_Aufgabe10.html
+++ b/Steck_Aufgabe10.html
@@ -18,12 +18,13 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 10
 
 Der Graph einer ganzrationalen Funktion 2. Grades 
-geht durch die Punkte (-1|2), (1|3) und ((3|2). 
+geht durch die Punkte (-1|2), (1|3) und (3|2). 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe10.jpg" >
  
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
