--- a/Steck_Aufgabe11.html
+++ b/Steck_Aufgabe11.html
@@ -23,7 +23,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe11.jpg" >
  
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
