--- a/Steck_Aufgabe13.html
+++ b/Steck_Aufgabe13.html
@@ -17,8 +17,9 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 13
 
-Eine nach oben geöffnete und um den Faktor 3 gestreckte 
-Parabel hat ihren Scheitelpunkt im Punkt (0|-2). 
+Eine nach oben geöffnete und um den Faktor 3 
+gestreckte Parabel hat ihren Scheitelpunkt 
+im Punkt (0|-2). 
 Wie lautet ihre Funktionsgleichung? 
 
 <img src="Aufgabe13.jpg" >
