--- a/Steck_Aufgabe15.html
+++ b/Steck_Aufgabe15.html
@@ -30,8 +30,8 @@ Scheitelpunktform einer Parabel:
 
 f<sub>(x)</sub> = a(x- x<sub>s</sub>)<sup>2</sup> + y<sub>s</sub>  
 
-Eine um den Faktor 4 gestreckte, nach unten geöffnete 
-Parabel bedeutet: a = -4.  
+Eine um den Faktor 4 gestreckte, nach unten 
+geöffnete Parabel bedeutet: a = -4.  
 
 Punkt (-2|3) in die Scheitelpunktform eingesetzt 
 (x<sub>s</sub> = -2, y<sub>s</sub> = 3) 
