--- a/Steck_Aufgabe5.html
+++ b/Steck_Aufgabe5.html
@@ -17,11 +17,13 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 5
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (-1|2) und (1|2). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (-1|2) und 
+(1|2). Wie lautet die Funktionsgleichung 
+dieser Kurvenschar?
  
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
