--- a/Steck_Aufgabe7.html
+++ b/Steck_Aufgabe7.html
@@ -17,12 +17,14 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 7
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte A(2|0) und B(4|0) und haben 
-an der Stelle x = 3  ein Maximum. 
-Wie lautet die Funktionsgleichung dieser Kurvenschar? 
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte A(2|0) und 
+B(4|0) und haben an der Stelle x = 3  ein 
+Maximum. Wie lautet die Funktionsgleichung 
+dieser Kurvenschar? 
 
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
@@ -52,7 +54,8 @@ a * 4² + b * 4 + c = 0 -->
 
 16a + 4b + c = 0        II          
  
-3. Haben an der Stelle x = 3 ein Maximum bedeutet: 
+3. Haben an der Stelle x = 3 ein Maximum 
+bedeutet: 
  
 die Parabel ist nach unten geöffnet, 
 und a muss negativ sein. 
