--- a/Steck_Aufgabe8.html
+++ b/Steck_Aufgabe8.html
@@ -18,7 +18,7 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 8
 
 Der Graph einer ganzrationalen Funktion 2. Grades 
-geht durch die Punkte A((0|2) und B(6|8) und 
+geht durch die Punkte A(0|2) und B(6|8) und 
 berührt die x-Achse im Punkt (c|0). 
 Wie lautet seine Funktionsgleichung? 
  
@@ -29,7 +29,8 @@ Scheitelpunktform:
  
 f<sub>(x)</sub> = a(x - c)<sup>2</sup>  
  
-Koordinaten von A in die Scheitelpunktform eingesetzt: 
+Koordinaten von A in die Scheitelpunktform 
+eingesetzt: 
  
 2 = a(0 - c)<sup>2</sup> 
  
@@ -39,8 +40,8 @@ Koordinaten von A in die Scheitelpunktform eingesetzt:
 a = ----        I 
      c<sup>2</sup>  
  
-Punktkoordinaten von B und A in die Scheitelpunktform 
-eingesetzt: 
+Punktkoordinaten von B und A in die 
+Scheitelpunktform eingesetzt: 
  
       2  
 8 = ---- (6 - c)<sup>2</sup> |*c<sup>2</sup> 
