--- a/Steck_Aufgabe9.html
+++ b/Steck_Aufgabe9.html
@@ -17,12 +17,14 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 9
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (0|0) und (2|0) und haben an 
-der Stelle x = 1 ein Minimum. Wie lautet die 
-Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (0|0) und 
+(2|0) und haben an der Stelle x = 1 ein 
+Minimum. Wie lautet die Funktionsgleichung 
+dieser Kurvenschar?
 
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
@@ -48,8 +50,8 @@ a * 2² + b * 2 + 0 = 0 -->
 
 4a + 2b = 0        I          
  
-3. Haben an der Stelle x = 1 ein Minimum bedeutet: 
-(a > 0)
+3. Haben an der Stelle x = 1 ein Minimum 
+bedeutet: (a > 0)
  
 f’<sub>(1)</sub> = 0 --> 
 
