--- a/Steck_Aufgabe12.html
+++ b/Steck_Aufgabe12.html
@@ -17,11 +17,13 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 12
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (-4|0) und (0|-4). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (-4|0) und 
+(0|-4). Wie lautet die Funktionsgleichung 
+dieser Kurvenschar?
 
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax<sup>2</sup> + bx + c 
  
