--- a/Steck_Aufgabe14.html
+++ b/Steck_Aufgabe14.html
@@ -27,9 +27,12 @@ Scheitelpunktform einer Parabel:
 
 f<sub>(x)</sub> = a(x- x<sub>s</sub>)<sup>2</sup> + y<sub>s</sub> 
 
-Nach unten geüffnete Normalparabel bedeutet a = -1  
+Nach unten geüffnete Normalparabel bedeutet: 
 
-Scheitelpunkt (4|0) bedeutet Berührpunkt auf der x-Achse 
+a = -1  
+
+Scheitelpunkt (4|0) bedeutet: 
+Berührpunkt auf der x-Achse 
 
 Punkt (4|0) in die Scheitelpunktform eingesetzt 
 (x<sub>s</sub> = 4, y<sub>s</sub> = 0): 
