--- a/Steck_Aufgabe6.html
+++ b/Steck_Aufgabe6.html
@@ -17,11 +17,13 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 6
 
-Alle Graphen einer ganzrationalen Funktion 2. Grades 
-gehen durch die Punkte (2|0) und (-2|0). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar?
+Alle Graphen einer ganzrationalen Funktion 
+2. Grades gehen durch die Punkte (2|0) und 
+(-2|0). Wie lautet die Funktionsgleichung 
+dieser Kurvenschar?
 
-Allgemeine Form einer ganzrationalen Funktion 2. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 2. Grades: 
   
 f<sub>(x)</sub> = ax² + bx + c 
  
