--- a/Steck_Aufgabe5.html
+++ b/Steck_Aufgabe5.html
@@ -31,7 +31,8 @@ f’<sub>(x)</sub> = 2ax + b
  
 f’’<sub>(x)</sub> = 2a 
 
-3 Bedingungen nötig - nur 2 Bedingungen gegeben --> 
+3 Bedingungen nötig - 
+nur 2 Bedingungen gegeben --> 
 
 keine eindeutige Funktionsgleichung --> 
 
