--- a/Steck_Aufgabe14.html
+++ b/Steck_Aufgabe14.html
@@ -27,7 +27,7 @@ Scheitelpunktform einer Parabel:
 
 f<sub>(x)</sub> = a(x- x<sub>s</sub>)<sup>2</sup> + y<sub>s</sub> 
 
-Nach unten geüffnete Normalparabel bedeutet: 
+Nach unten geöffnete Normalparabel bedeutet: 
 
 a = -1  
 
