--- a/Steck_Aufgabe16.html
+++ b/Steck_Aufgabe16.html
@@ -35,7 +35,9 @@ geschrieben werden.
 Eine um den Faktor 0,5 gestauchte und nach oben 
 geöffnete Parabel bedeutet: a = 0,5.  
 
-Die Punkte (4|0) und (2|0) eingesetzt (x<sub>(01)</sub> = 4, x<sub>(02)</sub> = 2): 
+Die Punkte (4|0) und (2|0) eingesetzt 
+
+(x<sub>(01)</sub> = 4, x<sub>(02)</sub> = 2): 
 
 f<sub>(x)</sub> = 0,5(x - 4)(x - 2)  
 
