--- a/Steck_Aufgabe21.html
+++ b/Steck_Aufgabe21.html
@@ -18,9 +18,9 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 21
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-ist punktsymmetrisch zum Nullpunkt, hat im Wendepunkt 
-eine Steigung von -3, und der Hochpunkt liegt auf 
-einer Höhe von y = 2. 
+ist punktsymmetrisch zum Nullpunkt, hat im 
+Wendepunkt eine Steigung von -3, und der Hochpunkt 
+liegt auf einer Höhe von y = 2. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe21.jpg" >
@@ -41,7 +41,7 @@ dort liegt der Wendepunkt des Graphen.
 
 Hat im Wendepunkt eine Steigung von -3 bedeutet: 
  
-f’<sub>(0)</sub> = - 3 --> 3a * 0² + c = - 3 --> c = - 3    
+f’<sub>(0)</sub> = - 3 --> 3a * 0² + c = - 3 --> c = -3    
  
 c = -3 in die erste Ableitung eingesetzt, 
 um x zu berechnen: 
