--- a/Steck_Aufgabe24.html
+++ b/Steck_Aufgabe24.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 24
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-geht durch die Punkte (0|-5) und (1|0) und hat bei 
-(5|0) einen Berührpunkt. 
+geht durch die Punkte (0|-5) und (1|0) und hat 
+bei (5|0) einen Berührpunkt. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe24.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -51,8 +52,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 - 5 = 0 -->
 
 a + b + c - 5 = 0        I      
  
-3. Hat bei (5|0) einen Berührpunkt bedeutet zum einen: 
-(d = -5 eingesetzt): 
+3. Hat bei (5|0) einen Berührpunkt bedeutet 
+zum einen: (d = -5 eingesetzt): 
  
 f<sub>(5)</sub> = 0 --> 
 
@@ -60,7 +61,8 @@ a * 5<sup>3</sup> + b * 5<sup>2</sup> + c * 5 - 5 = 0 -->
  
 125a + 25b + 5c - 5 = 0          II  
  
-4. Hat bei (5|0) einen Berührpunkt bedeutet zum anderen: 
+4. Hat bei (5|0) einen Berührpunkt bedeutet 
+zum anderen: 
  
 f’<sub>(5)</sub> = 0 --> 3a * 5<sup>2</sup> + 2b * 5 + c = 0 --> 
 
