--- a/Steck_Aufgabe26.html
+++ b/Steck_Aufgabe26.html
@@ -17,15 +17,17 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 26
 
-Wie lautet die Funktionsgleichung des Graphen einer 
-ganzrationalen Funktion 3. Grades, der die x-Achse 
-an den selben Stellen wie der Graph von 
-f(x) = 2x - 0,5x³ schneidet und wenn beide Graphen 
-im Nullpunkt senkrecht aufeinanderstehen? 
+Wie lautet die Funktionsgleichung des Graphen 
+einer ganzrationalen Funktion 3. Grades, der 
+die x-Achse an den selben Stellen wie der 
+Graph von f(x) = 2x - 0,5x³ schneidet und wenn 
+beide Graphen im Nullpunkt senkrecht 
+aufeinanderstehen? 
 
 <img src="Aufgabe26.jpg" >
 
-Für Schnittpunkte mit der x-Achse (Nullstellen) gilt f<sub>(x)</sub> = 0. 
+Für Schnittpunkte mit der x-Achse (Nullstellen) 
+gilt f<sub>(x)</sub> = 0. 
  
 2x - 0,5x<sup>3</sup> = 0 
  
@@ -58,12 +60,13 @@ Beide Graphen stehen im Nullpunkt senkrecht
 aufeinander bedeutet, dass die beiden Tangenten 
 an die Graphen senkrecht aufeinander stehen. 
  
-Für senkrecht aufeinander stehende Geraden (Tangenten) gilt: 
+Für senkrecht aufeinander stehende Geraden 
+(Tangenten) gilt: 
  
 m<sub>1</sub> * m<sub>2</sub> = -1 
  
-Die Steigung einer Tangente entspricht der ersten Ableitung 
-an diesem Punkt: 
+Die Steigung einer Tangente entspricht der ersten 
+Ableitung an diesem Punkt: 
  
 f<sub>(x)</sub> = 2x - 0,5x<sup>3</sup> 
  
@@ -77,7 +80,8 @@ f’<sub>(0)</sub> = 2 = m<sub>1</sub>
  
       m<sub>2</sub> = - 0,5  
  
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -87,7 +91,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
  
 4 Bedingungen: 
  
-1. Ein Schnittpunkt mit der x-Achse liegt bei (0|0) bedeutet: 
+1. Ein Schnittpunkt mit der x-Achse liegt bei 
+(0|0) bedeutet: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -95,8 +100,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0      
  
-2. Ein Schnittpunkt mit der x-Achse liegt bei (2|0) bedeutet: 
-(d = 0 eingesetzt): 
+2. Ein Schnittpunkt mit der x-Achse liegt bei 
+(2|0) bedeutet: (d = 0 eingesetzt): 
  
 f<sub>(2)</sub> = 0 --> 
 
@@ -104,8 +109,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 = 0 -->
 
 8a + 4b + 2c = 0     I      
  
-3. Ein Schnittpunkt mit der x-Achse liegt bei (-2|0) bedeutet: 
-(d = 0 eingesetzt): 
+3. Ein Schnittpunkt mit der x-Achse liegt bei 
+(-2|0) bedeutet: (d = 0 eingesetzt): 
  
 f<sub>(-2)</sub> = 0 --> 
 
@@ -113,8 +118,8 @@ a * (-2)<sup>3</sup> + b * (-2)<sup>2</sup> + c * (-2) = 0 -->
 
 -8a + 4b - 2c = 0     II     
  
-4. Die Steigung der Tangente m<sub>2</sub> = -0,5 in (0|0) an die 
-gesuchte Funktion bedeutet: 
+4. Die Steigung der Tangente m<sub>2</sub> = -0,5 in (0|0) 
+an die gesuchte Funktion bedeutet: 
  
 f’<sub>(0)</sub> = -0,5 --> 
 
