--- a/Steck_Aufgabe19.html
+++ b/Steck_Aufgabe19.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe19.jpg" >
  
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
  
 4 Bedingungen: 
 
-1. Berührt an der Stelle x = 1 die x-Achse bedeutet zum einen: 
+1. Berührt an der Stelle x = 1 die x-Achse 
+bedeutet zum einen: 
 
 f<sub>(1)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 4 -->
 
 a + b + c + d = 0   I 
 
-2. Berührt an der Stelle x = 1 die x-Achse bedeutet zum anderen: 
+2. Berührt an der Stelle x = 1 die x-Achse 
+bedeutet zum anderen: 
 
 f’<sub>(1)</sub> = 0 --> 
 
@@ -50,7 +53,8 @@ f’<sub>(1)</sub> = 0 -->
 
 3a + 2b + c = 0     II 
 
-3, Hat in ((3|-16) einen Wendepunkt bedeutet zum einen: 
+3, Hat in ((3|-16) einen Wendepunkt bedeutet 
+zum einen: 
 
 f<sub>(3)</sub> = -16 --> 
 
@@ -58,7 +62,8 @@ a * 3<sup>3</sup> + b * 3<sup>2</sup> + c * 3 + d = 0 -->
 
 27a + 9b + 3c + d = - 16       III 
 
-4, Hat in (3|-16) einen Wendepunkt bedeutet zum anderen: 
+4, Hat in (3|-16) einen Wendepunkt bedeutet 
+zum anderen: 
 
 f’’<sub>(3)</sub> = 0 --> 
 
