--- a/Steck_Aufgabe20.html
+++ b/Steck_Aufgabe20.html
@@ -17,15 +17,16 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 20
 
-Der Graph einer ganzrationalen Funktion 3. Grades ist 
-punktsymmetrisch zu (0|3) und berührt die x-Achse an 
-der Stelle x = 2. 
+Der Graph einer ganzrationalen Funktion 3. Grades 
+ist punktsymmetrisch zu (0|3) und berührt die 
+x-Achse an der Stelle x = 2. 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe20.jpg" >
 
-Punktsymmetrisch zu dem Punkt (0|3), also nicht dem Nullpunkt, 
-bedeutet, die allgemeine Form der Funktion ändert sich zu: 
+Punktsymmetrisch zu dem Punkt (0|3), also nicht 
+dem Nullpunkt, bedeutet, die allgemeine Form der 
+Funktion ändert sich zu: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + cx + d (nur ungerade Exponenten von x) 
  
@@ -43,8 +44,8 @@ a * 0<sup>3</sup> + c * 0 + d = 3 -->
 
 d = 3    
  
-2. Berührt die x-Achse an der Stelle x = 2 bedeutet zum einen: 
-(d = 3 eingesetzt) 
+2. Berührt die x-Achse an der Stelle x = 2 
+bedeutet zum einen: (d = 3 eingesetzt) 
  
 f<sub>(2)</sub> = 0 --> 
 
@@ -52,7 +53,8 @@ a * 2<sup>3</sup> + c * 2 + d = 0 -->
 
 8a + 2c + 3 = 0       I 
  
-2. Berührt die x-Achse an der Stelle x = 2 bedeutet zum anderen:  
+2. Berührt die x-Achse an der Stelle x = 2 
+bedeutet zum anderen:  
  
 f’<sub>(2)</sub> = 0 --> 
 
