--- a/Steck_Aufgabe22.html
+++ b/Steck_Aufgabe22.html
@@ -18,13 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 22
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-berührt die x-Achse im Nullpunkt, und die Tangente 
-im Punkt (-3|0) verläuft parallel zur Geraden y = 6x. 
+berührt die x-Achse im Nullpunkt, und die 
+Tangente im Punkt (-3|0) verläuft parallel zur 
+Geraden y = 6x. 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe22.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +36,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
  
-1. Berührt die x-Achse im Nullpunkt bedeutet zum einen: 
+1. Berührt die x-Achse im Nullpunkt bedeutet 
+zum einen: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +45,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0    
  
-2. Berührt die x-Achse im Nullpunkt bedeutet zum anderen: 
+2. Berührt die x-Achse im Nullpunkt bedeutet 
+zum anderen: 
   
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,9 +54,9 @@ f’<sub>(0)</sub> = 0 -->
 
 c = 0  
  
-3. Die Tangente im Punkt (-3|0) verläuft parallel zur
- Geraden y = 6x bedeutet zum einen:
- (c = 0 und d= 0 eingesetzt) 
+3. Die Tangente im Punkt (-3|0) verläuft parallel 
+zur Geraden y = 6x bedeutet zum einen:
+(c = 0 und d= 0 eingesetzt) 
  
 f<sub>(-3)</sub> = 0 --> 
 
@@ -60,8 +64,8 @@ a * (-3)<sup>3</sup> + b * (-3)<sup>2</sup> = 0 -->
 
 -27a + 9b = 0         I 
  
-4. Die Tangente im Punkt (-3|0) verläuft parallel zur 
-Geraden y = 6x bedeutet zum anderen: 
+4. Die Tangente im Punkt (-3|0) verläuft parallel 
+zur Geraden y = 6x bedeutet zum anderen: 
 Die Steigung der Tangente = erste Ableitung = 6. 
 (c = 0 eingesetzt) 
  
