--- a/Steck_Aufgabe23.html
+++ b/Steck_Aufgabe23.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe23.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -52,7 +53,8 @@ f’<sub>(1)</sub> = 0 -->
 
 3a + 2b + c = 0   II  
 
-3. Hat bei (0|2) einen Wendepunkt bedeutet zum einen: 
+3. Hat bei (0|2) einen Wendepunkt bedeutet 
+zum einen: 
 
 f<sub>(0)</sub> = 2 --> 
 
@@ -60,7 +62,8 @@ a * (0)<sup>3</sup> + c * 0 + d = 2 -->
 
 d = 2  
 
-4. Hat bei (0|2) einen Wendepunkt bedeutet zum anderen: 
+4. Hat bei (0|2) einen Wendepunkt bedeutet 
+zum anderen: 
 
 f’’<sub>(0)</sub> = 0 --> 
 
