--- a/Steck_Aufgabe25.html
+++ b/Steck_Aufgabe25.html
@@ -18,13 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 25
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-geht durch den Nullpunkt, hat einen Wendepunkt bei 
-(1|-2), und die Wendetangente schneidet die x-Achse 
-in (2|0). Wie lautet seine Funktionsgleichung?
+geht durch den Nullpunkt, hat einen Wendepunkt 
+bei (1|-2), und die Wendetangente schneidet die 
+x-Achse in (2|0). 
+Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe25.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -42,8 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0      
  
-2. Hat einen Wendepunkt bei (1|-2) bedeutet zum einen: 
-(d = 0 eingesetzt): 
+2. Hat einen Wendepunkt bei (1|-2) bedeutet 
+zum einen: (d = 0 eingesetzt): 
  
 f<sub>(1)</sub> = -2 --> 
 
@@ -51,7 +53,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 = -2 -->
 
 a + b + c = -2         I      
  
-3. Hat einen Wendepunkt bei (1|-2) bedeutet zum anderen: 
+3. Hat einen Wendepunkt bei (1|-2) bedeutet 
+zum anderen: 
  
 f’’<sub>(1)</sub> = 0 --> 
 
@@ -59,9 +62,11 @@ f’’<sub>(1)</sub> = 0 -->
 
 6a + 2b = 0              II  
  
-4. Die Wendetangente schneidet die x-Achse in (2|0) bedeutet: 
+4. Die Wendetangente schneidet die x-Achse in 
+(2|0) bedeutet: 
  
-Steigung der Wendetangente = Steigung einer Geraden: 
+Steigung der Wendetangente = Steigung einer 
+Geraden: 
  
 Sie geht durch die Punkte: (1|-2) und (2|0) 
                            x<sub>1</sub> y<sub>1</sub>      x<sub>2</sub> y<sub>2</sub> 
@@ -70,7 +75,8 @@ Sie geht durch die Punkte: (1|-2) und (2|0)
 m = --------- = ---------- = --- = 2 
      x<sub>2</sub> - x<sub>1</sub>       2 - 1      1 
  
-Steigung der Wendetangente = erste Ableitung im Wendepunkt 
+Steigung der Wendetangente = erste Ableitung 
+im Wendepunkt 
  
 f’<sub>(1)</sub> = 2 --> 
 
