--- a/Steck_Aufgabe27.html
+++ b/Steck_Aufgabe27.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 27
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-tangiert an der Stelle x = 0 die x-Achse und hat in 
-(2/3|-16/27) einen Wendepunkt. 
+tangiert an der Stelle x = 0 die x-Achse und hat 
+in (2/3|-16/27) einen Wendepunkt. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe27.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Tangiert an der Stelle x = 0 die x-Achse bedeutet zum einen: 
+1. Tangiert an der Stelle x = 0 die x-Achse 
+bedeutet zum einen: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0      
  
-2. Tangiert an der Stelle x = 0 die x-Achse bedeutet zum anderen: 
+2. Tangiert an der Stelle x = 0 die x-Achse 
+bedeutet zum anderen: 
  
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,8 +53,8 @@ f’<sub>(0)</sub> = 0 -->
 
 c = 0           
  
-3. Hat in (2/3|- 16/27) einen Wendepunkt bedeutet zum einen: 
-(c = 0 und d = 0 eingesetzt): 
+3. Hat in (2/3|- 16/27) einen Wendepunkt bedeutet 
+zum einen: (c = 0 und d = 0 eingesetzt): 
  
 f<sub>(2/3)</sub> = 0 --> 
 
@@ -63,7 +66,8 @@ a * (2/3)<sup>3</sup> + b * (2/3)<sup>2</sup> = -16/27 -->
  
 (2/3)a + b = -4/3       I 
  
-4. Hat in (2/3|- 16/27) einen Wendepunkt bedeutet zum anderen: 
+4. Hat in (2/3|- 16/27) einen Wendepunkt bedeutet 
+zum anderen: 
  
 f’’<sub>(2/3)</sub> = 6a * (2/3) + 2b = 0 --> 
 
