--- a/Steck_Aufgabe28.html
+++ b/Steck_Aufgabe28.html
@@ -24,8 +24,9 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe28.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades, die im 
-Nullpunkt einen Wendepunkt hat (Punktsymmetrie): 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades, die im Nullpunkt einen 
+Wendepunkt hat (Punktsymmetrie): 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + cx  
  
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 6ax
  
 2 Bedingungen: 
  
-1. Hat im Punkt (2|-4) die Steigung 2 bedeutet zum einen: 
+1. Hat im Punkt (2|-4) die Steigung 2 bedeutet 
+zum einen: 
  
 f<sub>(2)</sub> = -4 --> 
 
@@ -43,7 +45,8 @@ a * 2<sup>3</sup> + c * 2 = -4 -->
 
 8a + 2c = - 4     I      
  
-2. Hat im Punkt (2|-4) die Steigung 2 bedeutet zum anderen: 
+2. Hat im Punkt (2|-4) die Steigung 2 bedeutet 
+zum anderen: 
   
 f’<sub>(2)</sub> = 2 --> 
 
