--- a/Steck_Aufgabe29.html
+++ b/Steck_Aufgabe29.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe29.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -51,8 +52,8 @@ f’<sub>(3)</sub> = 0 -->
 
 27a + 6b + c = 0     I      
  
-3. Seine Normale im Wendepunkt (2/3|f(2/3) hat die 
-Steigung 3/49 bedeutet zum einen: 
+3. Seine Normale im Wendepunkt (2/3|f(2/3)) hat 
+die Steigung 3/49 bedeutet zum einen: 
   
 f’’<sub>(2/3)</sub> = 0 --> 
 
@@ -60,11 +61,11 @@ f’’<sub>(2/3)</sub> = 0 -->
 
 4a + 2b = 0         II  
  
-4. Seine Normale im Wendepunkt (2/3|f(2/3)) hat die 
-Steigung 3/49 bedeutet zum anderen: 
-Normale und Tangente im Wendepunkt stehen senkrecht 
-aufeinander. Es gilt Steigung der Normalen m<sub>N</sub> * Steigung 
-der Tangente m<sub>T</sub> = -1.  
+4. Seine Normale im Wendepunkt (2/3|f(2/3)) hat 
+die Steigung 3/49 bedeutet zum anderen: 
+Normale und Tangente im Wendepunkt stehen 
+senkrecht aufeinander. Es gilt: Steigung der 
+Normalen m<sub>N</sub> * Steigung der Tangente m<sub>T</sub> = -1.  
  
 m<sub>N</sub> * m<sub>T</sub> = -1 
  
