--- a/Steck_Aufgabe31.html
+++ b/Steck_Aufgabe31.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 31
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-geht durch den Nullpunkt, hat bei (1|1) ein Maximum 
-und einen Wendepunkt bei (3|f(3)). 
+geht durch den Nullpunkt, hat bei (1|1) ein 
+Maximum und einen Wendepunkt bei (3|f(3)). 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe31.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -49,7 +50,8 @@ f<sub>(1)</sub> = 1 --> a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 = 1 -->
 
 a + b + c = 1         I  
  
-3. Hat bei (1|1) ein Maximum bedeutet zum anderen: 
+3. Hat bei (1|1) ein Maximum bedeutet zum 
+anderen: 
  
 f’<sub>(1)</sub> = 0 --> 
 
