--- a/Steck_Aufgabe32.html
+++ b/Steck_Aufgabe32.html
@@ -18,14 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 32
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-ist punktsymmetrisch zum Nullpunkt, geht durch (1|-1) 
-und hat einen Extremwert an der Stelle x = 2. 
-Wie lautet seine Funktionsgleichung?
+ist punktsymmetrisch zum Nullpunkt, geht durch 
+(1|-1) und hat einen Extremwert an der Stelle 
+x = 2. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe32.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades 
-punktsymmetrisch zum Nulllpunkt: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades punktsymmetrisch 
+zum Nulllpunkt: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + cx  
  
@@ -43,7 +44,8 @@ a * 1<sup>3</sup> + c * 1 - 1 -->
 
 a + c = - 1       I  
  
-2. Hat einen Extremwert an der Stelle x = 2 bedeutet: 
+2. Hat einen Extremwert an der Stelle x = 2 
+bedeutet: 
   
 f’<sub>(2)</sub> = 0 --> 
 
