--- a/Steck_Aufgabe35.html
+++ b/Steck_Aufgabe35.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe35.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -43,7 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0  
  
-2. Hat bei x = 2 eine waagerechte Tangente bedeutet: 
+2. Hat bei x = 2 eine waagerechte Tangente 
+bedeutet: 
  
 f’<sub>(2)</sub> = 0 --> 
 
