--- a/Steck_Aufgabe36.html
+++ b/Steck_Aufgabe36.html
@@ -17,15 +17,16 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 36
 
-Wie lautet die Funktionsgleichung des Graphen einer 
-ganzrationalen Funktion 3. Grades, der die x-Achse 
-an der Stelle x = -2 schneidet, bei (0|0) einen 
-Wendepunkt hat und deren Wendetangente die Gleichung  
-f<sub>(x)</sub> = (1/3)x hat?
+Wie lautet die Funktionsgleichung des Graphen 
+einer ganzrationalen Funktion 3. Grades, der 
+die x-Achse an der Stelle x = -2 schneidet, 
+bei (0|0) einen Wendepunkt hat und deren 
+Wendetangente die Gleichung f<sub>(x)</sub> = (1/3)x hat?
 
 <img src="Aufgabe36.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Schneidet die x-Achse an der Stelle x = -2 bedeutet: 
+1. Schneidet die x-Achse an der Stelle x = -2 
+bedeutet: 
  
 f<sub>(-2)</sub> = 0 --> 
 
@@ -43,7 +45,8 @@ a * (-2)<sup>3</sup> + b * (-2)<sup>2</sup> + c * (-2) + d = 0 -->
 
  -8a + 4b - 2c + d = 0     I 
  
-2. Hat einen Wendepunkt bei (0|0) bedeutet zum einen: 
+2. Hat einen Wendepunkt bei (0|0) bedeutet zum 
+einen: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -51,7 +54,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0  
  
-3. Hat einen Wendepunkt bei (0|0) bedeutet zum anderen: 
+3. Hat einen Wendepunkt bei (0|0) bedeutet zum 
+anderen: 
   
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -61,8 +65,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 b = 0 
  
-4. Die Wendetangente hat die Gleichung f(x) = (1/3)x bedeutet: 
-(b = 0 eingesetzt): 
+4. Die Wendetangente hat die Gleichung 
+f(x) = (1/3)x bedeutet: (b = 0 eingesetzt): 
   
 f’<sub>(0)</sub> = 1/3 --> 
 
