--- a/Steck_Aufgabe38.html
+++ b/Steck_Aufgabe38.html
@@ -19,13 +19,14 @@
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
 geht durch den Koordinatenursprung, hat bei x = 6 
-eine Nullstelle und bei x = 3 einen Wendepunkt mit 
-der Steigung -3. 
+eine Nullstelle und bei x = 3 einen Wendepunkt 
+mit der Steigung -3. 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe38.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -43,7 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0 
  
-2. Hat bei x = 6 eine Nullstelle bedeutet (d  = 0 eingesetzt): 
+2. Hat bei x = 6 eine Nullstelle bedeutet: 
+(d  = 0 eingesetzt): 
  
 f<sub>(6)</sub> = 0 --> 
 
@@ -59,7 +61,8 @@ f’’<sub>(3)</sub> = 0 -->
 
 18a + 2b = 0        II  
  
-4. Hat einen Wendepunkt bei x = 3 mit der Steigung -3 bedeutet: 
+4. Hat einen Wendepunkt bei x = 3 mit der 
+Steigung -3 bedeutet: 
   
 f’<sub>(3)</sub> = -3 --> 
 
