--- a/Steck_Aufgabe30.html
+++ b/Steck_Aufgabe30.html
@@ -20,12 +20,13 @@
 Der Graph einer ganzrationalen Funktion 3. Grades 
 hat bei x = 2/3 einen Wendepunkt, schneidet an der 
 Stelle x = -2 die x-Achse, und die Normale 
-f(x) = (5/3)x - 5/3 schneidet ihn an der Stelle x = 1. 
-Wie lautet seine Funktionsgleichung?
+f(x) = (5/3)x - 5/3 schneidet ihn an der Stelle 
+x = 1. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe30.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -43,7 +44,8 @@ f’’<sub>(2/3)</sub> = 0 -->
 
 4a + 2b = 0         I  
  
-2. Schneidet an der Stelle x = -2 die x-Achse bedeutet: 
+2. Schneidet an der Stelle x = -2 die x-Achse 
+bedeutet: 
  
 f<sub>(-2)</sub> = 0 --> 
 
@@ -51,8 +53,8 @@ a * (-2)<sup>3</sup> + b * (-2)<sup>2</sup> + c * (-2) + d = 0 -->
 
 -8a + 4b - 2c + d = 0        II 
  
-3. Die Normale f<sub>(x)</sub> = (5/3)x - 5/3 schneidet ihn an 
-der Stelle x = 1 bedeutet: 
+3. Die Normale f<sub>(x)</sub> = (5/3)x - 5/3 
+schneidet ihn an der Stelle x = 1 bedeutet: 
  
 f<sub>(1)</sub> = 5/3 * 1 - 5/3 = 0 --> 
  
@@ -68,7 +70,11 @@ a + b + c + d = 0     III
  
 Es gilt:   
 
-Steigung der Normale m<sub>N</sub> * Steigung der Tangente m<sub>T</sub> = -1 
+Steigung der Normale = m<sub>N</sub>  
+
+Steigung der Tangente = m<sub>T</sub>  
+
+     m<sub>N</sub> * m<sub>T</sub> = -1
  
                5/3 * m<sub>T</sub> = -1 | *3 
  
@@ -76,7 +82,8 @@ Steigung der Normale m<sub>N</sub> * Steigung der Tangente m<sub>T</sub> = -1
  
                      m<sub>T</sub> = -3/5 = -0,6 
  
-Tangentensteigung m<sub>T</sub> = -0,6 an der Stelle x  = 1 bedeutet: 
+Tangentensteigung m<sub>T</sub> = -0,6 an der Stelle 
+x = 1 bedeutet: 
  
 f’<sub>1</sub> = -0,6 --> 
 
@@ -120,7 +127,8 @@ a = 0,1 und b = -0,2 in IV eingesetzt:
  
                        c = -0,5 
  
-a = 0,1 und b = -0,2 und c = -0,5 in III eingesetzt. 
+a = 0,1 und b = -0,2 und c = -0,5 in III 
+eingesetzt. 
  
 0,1 - 0,2 - 0,5 + d = 0 
  
