--- a/Steck_Aufgabe33.html
+++ b/Steck_Aufgabe33.html
@@ -18,14 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 33
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-hat an der Stelle  x = -1 eine Nullstelle, schneidet 
-die y-Achse an der Stelle y = 2 und berührt die 
-x-Achse an der Stelle x = 2. 
+hat an der Stelle  x = -1 eine Nullstelle, 
+schneidet die y-Achse an der Stelle y = 2 und 
+berührt die x-Achse an der Stelle x = 2. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe33.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat an der Stelle x = -1 eine Nullstelle bedeutet:  
+1. Hat an der Stelle x = -1 eine Nullstelle 
+bedeutet:  
  
 f<sub>(-1)</sub> = 0 --> 
 
@@ -43,7 +45,8 @@ a * (-1)<sup>3</sup> + b * (-1)<sup>2</sup> + c * (-1) + d =  0 -->
 
 -a + b - c + d = 0        I      
  
-2. Schneidet die y-Achse an der Stelle y = 2 bedeutet: 
+2. Schneidet die y-Achse an der Stelle y = 2 
+bedeutet: 
   
 f<sub>(0)</sub> = 2 --> 
 
@@ -51,8 +54,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 2 -->
 
 d = 2           
  
-3. Berührt die x-Achse an der Stelle x = 2 bedeutet zum einen:
-(d = 2 eingesetzt): 
+3. Berührt die x-Achse an der Stelle x = 2 
+bedeutet zum einen:(d = 2 eingesetzt): 
  
 f<sub>(2)</sub>= 0 --> 
 
@@ -60,7 +63,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 + 2 = 0 -->
  
 8a + 4b + 2c + 2 = 0     II 
  
-4. Berührt die x-Achse an der Stelle x = 2 bedeutet zum anderen: 
+4. Berührt die x-Achse an der Stelle x = 2 
+bedeutet zum anderen: 
  
 f’<sub>(2)</sub> = 0 --> 
 
