--- a/Steck_Aufgabe34.html
+++ b/Steck_Aufgabe34.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe34.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -35,7 +36,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Berührt die x-Achse im Koordinatenursprung bedeutet zum einen: 
+1. Berührt die x-Achse im Koordinatenursprung 
+bedeutet zum einen: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -43,7 +45,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0  
  
-2. Berührt die x-Achse im Koordinatenursprung bedeutet zum anderen: 
+2. Berührt die x-Achse im Koordinatenursprung 
+bedeutet zum anderen: 
  
 f’<sub>(0)</sub> = 0 --> 
 
