--- a/Steck_Aufgabe37.html
+++ b/Steck_Aufgabe37.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe37.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Schneidet die x-Achse an der Stelle x = -2 bedeutet: 
+1. Schneidet die x-Achse an der Stelle x = -2 
+bedeutet: 
  
 f<sub>(-2)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * (-2)<sup>3</sup> + b * (-2)<sup>2</sup> + c * (-2) + d = 0 -->
 
 -8a + 4b - 2c + d = 0     I 
  
-2. Schneidet die x-Achse an der Stelle x = 3 bedeutet: 
+2. Schneidet die x-Achse an der Stelle x = 3 
+bedeutet: 
  
 f<sub>(3)</sub> = 0 --> 
 
@@ -50,7 +53,8 @@ a * 3<sup>3</sup> + b * 3<sup>2</sup> + c * 3 + d = 0 -->
  
 27a + 9b + 6c + d = 0     II 
  
-3. Hat einen Hochpunkt (0|7,2) bedeutet zum einen: 
+3. Hat einen Hochpunkt (0|7,2) bedeutet zum 
+einen: 
  
 f<sub>(0)</sub> = 7,2 --> 
 
@@ -58,7 +62,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 7,2 -->
 
 d = 7,2  
  
-4. Hat einen Hochpunkt bei (0|7,2) bedeutet zum anderen: 
+4. Hat einen Hochpunkt bei (0|7,2) bedeutet zum 
+anderen: 
   
 f’<sub>(0)</sub> = 0 --> 
 
