--- a/Steck_Aufgabe39.html
+++ b/Steck_Aufgabe39.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe39.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -52,7 +53,8 @@ a * 6<sup>3</sup> + b * 6<sup>2</sup> + c * 6 = 0 -->
 
 216a + 36b + 6c = 0      I  
  
-3. Die Wendetangente durch (0|0) bedeutet, (0|0) ist Wendepunkt: 
+3. Die Wendetangente durch (0|0) bedeutet, (0|0) 
+ist Wendepunkt: 
  
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -62,8 +64,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 b = 0  
  
-4. Wendetangente hat die Gleichung y = 2x bedeutet:
-(b = 0 eingesetzt) 
+4. Wendetangente hat die Gleichung y = 2x 
+bedeutet:(b = 0 eingesetzt) 
  
 f’<sub>(0)</sub> = 2 --> 
 
