--- a/Steck_Aufgabe40.html
+++ b/Steck_Aufgabe40.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe40.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Schneidet die x-Achse an der Stelle 0 bedeutet: 
+1. Schneidet die x-Achse an der Stelle 0 
+bedeutet: 
  
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,8 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0 
  
-2. Schneidet die x-Achse an der Stelle - 3 bedeutet: 
-(d  = 0 eingesetzt) 
+2. Schneidet die x-Achse an der Stelle -3 
+bedeutet: (d  = 0 eingesetzt) 
  
 f<sub>(-3)</sub> = 0 --> 
 
@@ -60,7 +62,8 @@ a * 3³ + b * 3<sup>2</sup> + c * 3 = -6 -->
  
 27a + 9b + 3c = -6      II  
  
-4. Hat bei (3|-6) ein Minimum bedeutet zum anderen: 
+4. Hat bei (3|-6) ein Minimum bedeutet zum 
+anderen: 
  
 f’<sub>(3)</sub> = 0 --> 
 
