--- a/Steck_Aufgabe44.html
+++ b/Steck_Aufgabe44.html
@@ -24,7 +24,8 @@ Wendepunkt. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe44.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -116,9 +117,9 @@ in I eingesetzt:
  
                    - 3,375 - 4,5 + 4,125 + d = 0 
  
-                                  - 3,75 + d = 0 |+3,75 
+                            - 3,75 + d = 0 |+3,75 
  
-                                           d = 3,75  
+                                     d = 3,75  
  
 Gesuchte Funktionsgleichung: 
  
