--- a/Steck_Aufgabe47.html
+++ b/Steck_Aufgabe47.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 47
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-schneidet die x-Achse bei -1, hat dort die x-Achse 
-als Tangente und einen Tiefpunkt bei (0|-1). 
-Wie lautet seine Funktionsgleichung? 
+schneidet die x-Achse bei -1, hat dort die 
+x-Achse als Tangente und einen Tiefpunkt bei 
+(0|-1). Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe47.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
