--- a/Steck_Aufgabe50.html
+++ b/Steck_Aufgabe50.html
@@ -17,10 +17,10 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 50
 
-Wie lautet die Funktionsgleichung einer Funktion 3. Grades 
-der Form  f<sub>(x)</sub> = x<sup>3</sup> - ax<sup>2</sup> + bx + c, wenn sie einen 
-Wendepunkt bei (2|3) und dort eine Tangente parallel zur 
-x-Achse hat? 
+Wie lautet die Funktionsgleichung einer Funktion 
+3. Grades der Form  f<sub>(x)</sub> = x<sup>3</sup> - ax<sup>2</sup> + bx + c, wenn sie 
+einen Wendepunkt bei (2|3) und dort eine Tangente 
+parallel zur x-Achse hat? 
 
 <img src="Aufgabe50.jpg" >
 
@@ -34,7 +34,8 @@ f’’<sub>(x)</sub> = 6x - 2a
  
 3 Bedingungen: 
  
-1. Hat einen Wendepunkt bei (2|3) bedeutet zum einen: 
+1. Hat einen Wendepunkt bei (2|3) bedeutet zum 
+einen: 
  
 f<sub>(2)</sub> = 3 --> 
 
@@ -42,7 +43,8 @@ f<sub>(2)</sub> = 3 -->
 
 8 - 4a + 2b + c = 3       I 
  
-2. Hat einen Wendepunkt bei (2|3) bedeutet zum anderen: 
+2. Hat einen Wendepunkt bei (2|3) bedeutet zum 
+anderen: 
  
 f’’<sub>(2)</sub> = 0 --> 
 
@@ -54,8 +56,8 @@ f’’<sub>(2)</sub> = 0 -->
  
 a = 6      
  
-3. Hat eine Parallele zur x-Achse durch den Wendepunkt 
-bedeutet:(a = 6 eingesetzt):  
+3. Hat eine Parallele zur x-Achse durch den 
+Wendepunkt bedeutet:(a = 6 eingesetzt):  
  
 f’<sub>(2)</sub> = 3 * 2<sup>2</sup> - 2 * 6 * 2 + b = 0 --> 
 
