--- a/Steck_Aufgabe46.html
+++ b/Steck_Aufgabe46.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe46.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -113,7 +114,7 @@ in I eingesetzt:
  
                       -2 + 1 + 4 + d = 0 
  
-                               3 * d = 0 | -3  
+                               3 * d = 0 |-3  
  
                                    d = -3    
  
