--- a/Steck_Aufgabe49.html
+++ b/Steck_Aufgabe49.html
@@ -24,7 +24,8 @@ bei (1|-2). Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe49.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Schneidet die x-Achse an der Stelle x = -1 bedeutet: 
+1. Schneidet die x-Achse an der Stelle x = -1 
+bedeutet: 
  
 f<sub>(-1)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * (-1)<sup>3</sup> + b * (-1)<sup>2</sup> + c * (-1) + d = 0 -->
 
 -a + b - c + d = 0      I 
  
-2. Schneidet die y-Achse an der Stelle y = -4 bedeutet: 
+2. Schneidet die y-Achse an der Stelle y = -4 
+bedeutet: 
  
 f<sub>(0)</sub> = - 4 --> 
 
@@ -50,8 +53,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = -4 -->
 
 d = -4 
  
-3. Hat einen Wendepunkt bei (1|-2) bedeutet zum einen 
-(d = -4 eingesetzt):  
+3. Hat einen Wendepunkt bei (1|-2) bedeutet zum 
+einen (d = -4 eingesetzt):  
  
 f<sub>(1)</sub> = - 2 --> 
 
@@ -59,7 +62,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 - 4 = -2 | +4 -->
  
 a + b + c = 2     II 
  
-4. Hat einen Wendepunkt bei (1|-2) bedeutet zum anderen:  
+4. Hat einen Wendepunkt bei (1|-2) bedeutet zum 
+anderen:  
  
 f’’<sub>(1)</sub> = 0 --> 
 
