--- a/Steck_Aufgabe53.html
+++ b/Steck_Aufgabe53.html
@@ -17,11 +17,14 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 53
 
-Alle Graphen einer ganzrationalen Funktion 3. Grades 
-gehen durch die Punkte (1|0), (0|2), (-2|2). 
-Wie lautet die Funktionsgleichung dieser Kurvenschar? 
+Alle Graphen einer ganzrationalen Funktion 
+3. Grades gehen durch die Punkte (1|0), 
+(0|2), (-2|2). 
+Wie lautet die Funktionsgleichung dieser 
+Kurvenschar? 
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -29,7 +32,8 @@ f’<sub>(x)</sub> = 3ax<sup>2</sup> + 2bx + c
  
 f’’<sub>(x)</sub> = 6ax + 2b 
 
-3 Bedingungen, 4 für eine eindeutige Lösung nötig --> 
+3 Bedingungen, 
+4 für eine eindeutige Lösung nötig --> 
 
 Kurvenschar: 
  
