--- a/Steck_Aufgabe56.html
+++ b/Steck_Aufgabe56.html
@@ -18,14 +18,15 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 56
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-berührt die x-Achse im Koordinatenursprung und hat 
-eine Tangente am Punkt (-3|0), die parallel zur 
-Geraden y = 6x verläuft. 
+berührt die x-Achse im Koordinatenursprung und 
+hat eine Tangente am Punkt (-3|0), die parallel 
+zur Geraden y = 6x verläuft. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe56.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
