--- a/Steck_Aufgabe58.html
+++ b/Steck_Aufgabe58.html
@@ -23,7 +23,8 @@ haben an der Stelle  x = 2 einen Extremwert.
 Wie lautet deren Funktionsgleichung?
 
 Allgemeine Form einer zum Koordinatenursprung 
-punktsymmetrischen ganzrationalen Funktion 3. Grades: 
+punktsymmetrischen ganzrationalen 
+Funktion 3. Grades: 
 
 f<sub>(x)</sub> = ax<sup>3</sup> + cx  
 
@@ -39,9 +40,11 @@ a * 0<sup>3</sup> + c * 0 = 0 -->
 
 0 = 0 liefert kein Ergebnis 
 
-Nur scheinbar 2 Bedingungen vorhanden --> Kurvenschar 
+Nur scheinbar 2 Bedingungen vorhanden --> 
+Kurvenschar 
 
-2. Hat an der Stelle x = 2 einen Extremwert bedeutet: 
+2. Hat an der Stelle x = 2 einen Extremwert 
+bedeutet: 
 
 f’<sub>(2)</sub> = 0 --> 
 
