--- a/Steck_Aufgabe60.html
+++ b/Steck_Aufgabe60.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe60.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -143,11 +144,11 @@ a<sub>2</sub> * (- ----)<sup>3</sup> - 4a<sub>2</sub> * (- ----) + 2 = 0
          √3                √3 
   
      8              8  
-- -------- * a<sub>2</sub> + ------ * a<sub>2</sub> + 2 = 0 | * √3 
+- -------- * a<sub>2</sub> + ------ * a<sub>2</sub> + 2 = 0 |*√3 
    3 * √3           √3  
 
     8 
-- ---- a<sub>2</sub> + 8a<sub>2</sub> + 2 * √3 = 0 |-2 * √3 
+- ---- a<sub>2</sub> + 8a<sub>2</sub> + 2 * √3 = 0 |-2*√3 
     3 
  
     8       
@@ -168,7 +169,9 @@ Gesuchte Funktionsgleichung:
 f<sub>1(x)</sub> = --- √3 * x<sup>3</sup> - 4 * --- √3 x + 2 =  
          8                 8   
   
-<span style="color:red">f<sub>1(x)</sub> = 0,375 √3 * x<sup>3</sup> - 1,5 * √3 x + 2</span> oder 
+<span style="color:red">f<sub>1(x)</sub> = 0,375 √3 * x<sup>3</sup> - 1,5 * √3 x + 2</span> 
+
+oder 
  
 <span style="color:red">f<sub>2(x)</sub> = -0,375 √3 * x<sup>3</sup> + 1,5 * √3 x + 2</span>
  
