--- a/Steck_Aufgabe51.html
+++ b/Steck_Aufgabe51.html
@@ -23,7 +23,8 @@ geht durch die Punkte (0|1), (1|0), (-1|4) und
 
 <img src="Aufgabe51.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
