--- a/Steck_Aufgabe52.html
+++ b/Steck_Aufgabe52.html
@@ -23,7 +23,8 @@ geht durch die Punkte (0|-1), (1|1), (-1|-7) und
 
 <img src="Aufgabe52.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
