--- a/Steck_Aufgabe55.html
+++ b/Steck_Aufgabe55.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe55.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -50,7 +51,8 @@ a * 3<sup>3</sup> + b * 3<sup>2</sup> + c * 3 + d = 9 -->
 
 27a + 9b + 3c + d = 9         II  
 
-3. Hat in (1|1) einen Wendepunkt bedeutet erstens: 
+3. Hat in (1|1) einen Wendepunkt bedeutet 
+erstens: 
 
 f<sub>(1)</sub> = 1 --> 
 
@@ -67,7 +69,8 @@ f’<sub>(1)</sub> = 0 -->
 
 3a + 2b + c = 0    IV 
 
-5. Hat in (1|1) einen Wendepunkt bedeutet drittens: 
+5. Hat in (1|1) einen Wendepunkt bedeutet 
+drittens: 
 
 f’’<sub>(1)</sub> = 0 --> 
 
