--- a/Steck_Aufgabe59.html
+++ b/Steck_Aufgabe59.html
@@ -17,12 +17,13 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 59
 
-Die Graphen von ganzrationalen Funktionen 3. Grades 
-haben einen Wendepunkt mit der Wendetangente y = x im  
-Koordínatenursprung. 
+Die Graphen von ganzrationalen Funktionen 
+3. Grades haben einen Wendepunkt mit der 
+Wendetangente y = x im  Koordínatenursprung. 
 Wie lautet deren Funktionsgleichung?
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -30,8 +31,8 @@ f’<sub>(x)</sub> = 3ax<sup>2</sup> + 2bx + c
  
 f’’<sub>(x)</sub> = 6ax + 2b 
 
-1. Hat einen Wendepunkt mit der Wendetangente y = x 
-im Koordinatenursprung bedeutet erstens: 
+1. Hat einen Wendepunkt mit der Wendetangente 
+y = x im Koordinatenursprung bedeutet erstens: 
 
 f<sub>(0)</sub> = 0 --> 
 
@@ -39,8 +40,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0 
 
-2. Hat einen Wendepunkt mit der Wendetangente y = x 
-im Koordinatenursprung bedeutet zweitens:  
+2. Hat einen Wendepunkt mit der Wendetangente 
+y = x im Koordinatenursprung bedeutet zweitens:  
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -50,8 +51,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 b = 0 
 
-3. Hat einen Wendepunkt mit der Wendetangente y = x 
-(Steigung = 1) im Koordinatenursprung 
+3. Hat einen Wendepunkt mit der Wendetangente 
+y = x (Steigung = 1) im Koordinatenursprung 
 bedeutet drittens:  
 
 f’<sub>(0)</sub> = 1 --> 
