--- a/Steck_Aufgabe63.html
+++ b/Steck_Aufgabe63.html
@@ -24,7 +24,8 @@ Wo liegen seine Nullstellen?
 
 <img src="Aufgabe63.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Berührt im Koordinatenursprung die x-Achse bedeutet zum einen: 
+1. Berührt im Koordinatenursprung die x-Achse 
+bedeutet zum einen: 
   
 f<sub>(0)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0 
  
-2. Berührt im Koordinatenursprung die x-Achse bedeutet zum anderen: 
+2. Berührt im Koordinatenursprung die x-Achse 
+bedeutet zum anderen: 
   
 f’<sub>(0)</sub> = 0 --> 
 
@@ -50,8 +53,8 @@ f’<sub>(0)</sub> = 0 -->
 
 c = 0 
  
-3. Hat einen Hochpunkt bei (2|2) bedeutet zum einen 
-(c = 0 und d = 0 eingesetzt): 
+3. Hat einen Hochpunkt bei (2|2) bedeutet zum 
+einen (c = 0 und d = 0 eingesetzt): 
   
 f<sub>(2)</sub> = 2 --> 
 
@@ -59,8 +62,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> = 0 -->
 
 8a + 4b = 2       I 
  
-4. Hat einen Hochpunkt bei (2|2) bedeutet zum anderen 
-(c = 0  eingesetzt): 
+4. Hat einen Hochpunkt bei (2|2) bedeutet zum 
+anderen (c = 0  eingesetzt): 
   
 f’<sub>(2)</sub> = 0 --> 
 
