--- a/Steck_Aufgabe66.html
+++ b/Steck_Aufgabe66.html
@@ -25,7 +25,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe66.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -35,8 +36,9 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 5 Bedingungen: 
 
-1. Hat im Punkt (0|1) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung - 24 bedeutet erstens: 
+1. Hat im Punkt (0|1) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung -24 bedeutet 
+erstens: 
 
 f<sub>(0)</sub> = 1 --> 
 
@@ -44,8 +46,9 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 1 -->
 
 d = 1  
 
-2. Hat im Punkt (0|1) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung - 24 bedeutet zweitens: 
+2. Hat im Punkt (0|1) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung -24 bedeutet 
+zweitens: 
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -55,18 +58,19 @@ f’’<sub>(0)</sub> = 0 -->
 
 b = 0  
 
-3. Hat im Punkt (0|1) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung - 24 bedeutet drittens: 
+3. Hat im Punkt (0|1) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung -24 bedeutet 
+drittens: 
 
-f’<sub>(0)</sub> = - 24 --> 
+f’<sub>(0)</sub> = -24 --> 
 
 3a * 0<sup>2</sup> + 2b * 0 + c = -24 --> 
 
 c = -24  
 
-4. Sein Hoch- und Tiefpunkt liegen jeweils 2 Einheien von 
-der y-Achse entfernt bedeutet zum einen 
-(c = -24 eingesetzt): 
+4. Sein Hoch- und Tiefpunkt liegen jeweils 2 
+Einheiten von der y-Achse entfernt bedeutet 
+zum einen (c = -24 eingesetzt): 
 
 f’<sub>(2)</sub> = 0 --> 
 
@@ -74,9 +78,9 @@ f’<sub>(2)</sub> = 0 -->
 
 12a + 4b - 24 = 0         I 
 
-5. Sein Hoch- und Tiefpunkt liegen jeweils 2 Einheiten von 
-der y-Achse entfernt bedeutet zum anderen 
-(c = - 24 eingesetzt): 
+5. Sein Hoch- und Tiefpunkt liegen jeweils 2 
+Einheiten von der y-Achse entfernt bedeutet 
+zum anderen (c = - 24 eingesetzt): 
 
 f’<sub>(-2)</sub> = 0 --> 
 
