--- a/Steck_Aufgabe68.html
+++ b/Steck_Aufgabe68.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe68.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat im Punkt (1|3) die Steigung 3 bedeutet zum einen: 
+1. Hat im Punkt (1|3) die Steigung 3 bedeutet zum
+einen: 
   
 f<sub>(1)</sub> = 3 --> 
 
@@ -42,7 +44,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 3 -->
 
 a + b + c + d = 3       I 
  
-2. Hat im Punkt (1|3) die Steigung 3 bedeutet zum anderen: 
+2. Hat im Punkt (1|3) die Steigung 3 bedeutet zum 
+anderen: 
   
 f’<sub>(1)</sub> = 3 --> 
 
@@ -50,7 +53,8 @@ f’<sub>(1)</sub> = 3 -->
 
 3a + 2b + c = 3       II 
  
-3. Hat im Punkt (0|4) einen Wendepunkt bedeutet zum einen: 
+3. Hat im Punkt (0|4) einen Wendepunkt bedeutet zum 
+einen: 
   
 f<sub>(0)</sub> = 4 --> 
 
@@ -58,7 +62,8 @@ a * 0³ + b * 0² + c * 0 + d = 4 -->
 
 d = 4 
  
-4. Hat im Punkt (0|4) einen Wendepunkt bedeutet zum anderen: 
+4. Hat im Punkt (0|4) einen Wendepunkt bedeutet zum 
+anderen: 
   
 f’’<sub>(0)</sub> = 0 --> 
 
