--- a/Steck_Aufgabe70.html
+++ b/Steck_Aufgabe70.html
@@ -24,7 +24,8 @@ y = -2,25x. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe70.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Berührt an der Stelle x = 1 die x-Achse bedeutet zum einen: 
+1. Berührt an der Stelle x = 1 die x-Achse bedeutet 
+zum einen: 
 
 f<sub>(1)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 0 -->
 
 a + b + c + d = 0      I 
 
-2. Berührt an der Stelle x = 1 die x-Achse bedeutet zum anderen: 
+2. Berührt an der Stelle x = 1 die x-Achse bedeutet 
+zum anderen: 
 
 f’<sub>(1)</sub> = 0 --> 
 
@@ -117,7 +120,8 @@ a = - 1,0625 und b = 5,8125 in IV eingesetzt:
  
                               c = -8,4375         
  
-a = -1,0625 und b = 5,8125 und c = -8,4375 in I eingesetzt: 
+a = -1,0625 und b = 5,8125 und 
+c = -8,4375 in I eingesetzt: 
 
  -1,0625 + 5,8125 - 8,4375 + d = 0 
  
