--- a/Steck_Aufgabe61.html
+++ b/Steck_Aufgabe61.html
@@ -23,7 +23,8 @@ geht durch die Punkte (2|6), (0|4), (3|5,5) und
 
 <img src="Aufgabe61.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
