--- a/Steck_Aufgabe62.html
+++ b/Steck_Aufgabe62.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe62.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat einen Wendepunkt bei (0|1) bedeutet zum einen: 
+1. Hat einen Wendepunkt bei (0|1) bedeutet zum 
+einen: 
 
 f<sub>(0)</sub> = 1 --> 
 
@@ -42,7 +44,8 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 1 -->
 
 d = 1 
 
-2. Hat einen Wendepunkt bei (0|1) bedeutet zum anderen: 
+2. Hat einen Wendepunkt bei (0|1) bedeutet zum 
+anderen: 
 
 f’’<sub>(0)</sub> = 0 --> 
 
@@ -52,8 +55,8 @@ f’’<sub>(0)</sub> = 0 -->
 
 b = 0 
 
-3. Hat an der Stelle x = -1 den Funktionswert 3 bedeutet 
-(d = 1 und b = 0 eingesetzt): 
+3. Hat an der Stelle x = -1 den Funktionswert 3 
+bedeutet (d = 1 und b = 0 eingesetzt): 
 
 f<sub>(-1)</sub> = 3 --> 
 
@@ -63,8 +66,8 @@ a * (-1)<sup>3</sup> + c * (-1) + 1 = 3 -->
 
 -a - c = 2         I 
 
-4. Hat an der Stelle x = 3 den Funktionswert 3 bedeutet 
-(d = 1 und b = 0 eingesetzt): 
+4. Hat an der Stelle x = 3 den Funktionswert 3 
+bedeutet (d = 1 und b = 0 eingesetzt): 
 
 f<sub>(3)</sub> = 3 --> 
 
