--- a/Steck_Aufgabe64.html
+++ b/Steck_Aufgabe64.html
@@ -23,7 +23,8 @@ geht durch die Punkte (1|6), (2|24,5), (3|59) und
 
 <img src="Aufgabe64.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
