--- a/Steck_Aufgabe65.html
+++ b/Steck_Aufgabe65.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe65.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,8 +35,9 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat im Punkt (2|14) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung 15 bedeutet erstens: 
+1. Hat im Punkt (2|14) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung 15 bedeutet 
+erstens: 
 
 f<sub>(2)</sub> = 14 --> 
 
@@ -43,8 +45,9 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 + d = 14 -->
 
 8a + 4b + 2c + d = 14        I 
 
-2. Hat im Punkt (2|14) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung 15 bedeutet zweitens: 
+2. Hat im Punkt (2|14) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung 15 bedeutet 
+zweitens: 
 
 f’’<sub>(2)</sub> = 0 -->
 
@@ -52,8 +55,9 @@ f’’<sub>(2)</sub> = 0 -->
 
 12a + 2b = 0       II  
 
-3. Hat im Punkt (2|14) (dem Wendepunkt) eine Wendetangente 
-mit der Steigung 15 bedeutet drittens: 
+3. Hat im Punkt (2|14) (dem Wendepunkt) eine 
+Wendetangente mit der Steigung 15 bedeutet 
+drittens: 
 
 f’<sub>(2)</sub> = 15 --> 
 
