--- a/Steck_Aufgabe67.html
+++ b/Steck_Aufgabe67.html
@@ -26,7 +26,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe67.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -36,7 +37,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Schneidet die x-Achse an der Stelle x = -3 bedeutet: 
+1. Schneidet die x-Achse an der Stelle x = -3 
+bedeutet: 
   
 f<sub>(-3)</sub> = 0 --> 
 
@@ -44,8 +46,9 @@ a * (-3)<sup>3</sup> + b * (-3)<sup>2</sup> + c * (-3) + d = 0 -->
 
  -27a + 9b - 3c + d = 0      I 
  
-2. Hat dort eine Tangente, die parallel zur Geraden 
-y = -12,5x + 1 verläuft bedeutet: Steigung = -12,5 
+2. Hat dort eine Tangente, die parallel zur 
+Geraden y = -12,5x + 1 verläuft bedeutet: 
+Steigung = -12,5 
   
 f’<sub>(-3)</sub> = -12,5 --> 
 
@@ -64,7 +67,8 @@ f’<sub>(-4/3)</sub> = 0 -->
  
        16a - 8b + 3c = 0           III 
  
-4. Hat an der Stelle x = 2 eine Extremstelle bedeutet: 
+4. Hat an der Stelle x = 2 eine Extremstelle 
+bedeutet: 
   
 f’<sub>(2)</sub> = 0 --> 
 
