--- a/Steck_Aufgabe72.html
+++ b/Steck_Aufgabe72.html
@@ -23,7 +23,8 @@ und (0|2). Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe72.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
