--- a/Steck_Aufgabe73.html
+++ b/Steck_Aufgabe73.html
@@ -17,16 +17,19 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 73
 
-Der Graph einer ganzrationalen Funktion geht durch die 
-Punkte (1|0) und (5|0) und hat ein Maximum bei (3|2). 
+Der Graph einer ganzrationalen Funktion geht 
+durch die Punkte (1|0) und (5|0) und hat ein 
+Maximum bei (3|2). 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe73.jpg" >
 
-Annahme: Es handelt sich um eine ganzrationale Funktion 
-3. Grades, weil 4. Bedingungen vorliegen. (siehe unten)
+Annahme: Es handelt sich um eine ganzrationale 
+Funktion 3. Grades, weil 4. Bedingungen 
+vorliegen. (siehe unten)
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
