--- a/Steck_Aufgabe74.html
+++ b/Steck_Aufgabe74.html
@@ -18,12 +18,13 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 74
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-hat ein Maximum bei (2|4) und ein Minimum bei (1|1). 
-Wie lautet seine Funktionsgleichung? 
+hat ein Maximum bei (2|4) und ein Minimum bei 
+(1|1). Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe74.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
