--- a/Steck_Aufgabe75.html
+++ b/Steck_Aufgabe75.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe75.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -42,7 +43,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 0 -->
 
 a + b + c + d = 0       I
 
-2 Berührt bei x = 2 die x-Achse bedeutet zum einen: 
+2 Berührt bei x = 2 die x-Achse bedeutet zum 
+einen: 
 
 f<sub>(2)</sub> = 0 --> 
 
@@ -50,7 +52,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 + d = 0 -->
 
 8a + 4b + 2c + d = 0     II 
 
-3. Berührt bei x = 2 die x-Achse bedeutet zum anderen: 
+3. Berührt bei x = 2 die x-Achse bedeutet zum 
+anderen: 
 
 f’<sub>(1)</sub> = 0 --> 
 
