--- a/Steck_Aufgabe76.html
+++ b/Steck_Aufgabe76.html
@@ -17,8 +17,9 @@
 
     <pre><p class ="Aufgabe"><b>Aufgabe 76
 
-Der Graph einer ganzrationalen, zu (0|0) punktsymmetrischen 
-Funktion 3. Grades, hat im Punkt (1|0) die Steigung -3. 
+Der Graph einer ganzrationalen, zu (0|0) 
+punktsymmetrischen Funktion 3. Grades, hat im 
+Punkt (1|0) die Steigung -3. 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe76.jpg" >
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax
  
 2 Bedingungen: 
  
-1. Hat im Punkt (1|0) die Steigung -3 bedeutet zum einen: 
+1. Hat im Punkt (1|0) die Steigung -3 bedeutet 
+zum einen: 
   
 f<sub>(1)</sub> = 0 --> 
 
@@ -42,7 +44,8 @@ a * 1<sup>3</sup> + c * 1 = 0 -->
 
 a + c = 0        I 
  
-2. Hat im Punkt (1|0) die  Steigung -3 bedeutet zum anderen: 
+2. Hat im Punkt (1|0) die  Steigung -3 bedeutet 
+zum anderen: 
   
 f’<sub>(1)</sub> = - 3 --> 
 
