--- a/Steck_Aufgabe79.html
+++ b/Steck_Aufgabe79.html
@@ -24,7 +24,8 @@ Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe79.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat einen Extremwert bei (1|2) bedeutet zum einen: 
+1. Hat einen Extremwert bei (1|2) bedeutet zum 
+einen: 
 
 f<sub>(1)</sub> = 2 --> 
 
@@ -42,7 +44,8 @@ a * 1<sup>3</sup> + b * 1<sup>2</sup> + c * 1 + d = 2 -->
 
 a + b + c + d = 2       I 
 
-2. Hat einen Extremwert bei (1|2) bedeutet zum anderen: 
+2. Hat einen Extremwert bei (1|2) bedeutet zum 
+anderen: 
 
 f’<sub>(1)</sub> = 0 --> 
 
@@ -50,8 +53,8 @@ f’<sub>(1)</sub> = 0 -->
 
 3a + 2b + c = 0      II 
 
-3. Hat an der Stelle x = 2 einen Wendepunkt mit einer Steigung 
-von -1 bedeutet zum einen: 
+3. Hat an der Stelle x = 2 einen Wendepunkt mit 
+einer Steigung von -1 bedeutet zum einen: 
 
 f’’<sub>(2)</sub> = 0 --> 
 
@@ -59,8 +62,8 @@ f’’<sub>(2)</sub> = 0 -->
 
 12a + 2b = 0        III 
 
-4. Hat an der Stelle x = 2 einen Wendepunkt mit einer Steigung 
-von -1 bedeutet zum anderen: 
+4. Hat an der Stelle x = 2 einen Wendepunkt mit 
+einer Steigung von -1 bedeutet zum anderen: 
 
 f’<sub>(2)</sub> = - 1 --> 
 
