--- a/Steck_Aufgabe80.html
+++ b/Steck_Aufgabe80.html
@@ -19,13 +19,13 @@
 
 Der Graph einer punktsymmetrischen ganzrationalen 
 Funktion 3. Grades hat im Wendepunkt (0|0) die 
-Steigung -3 und an der Stelle x = 1 einen Extremwert. 
-Wie lautet seine Funktionsgleichung?
+Steigung -3 und an der Stelle x = 1 einen 
+Extremwert. Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe80.jpg" >
 
-Allgemeine Form einer zu (0|0) punktsymmetrischen ganzrationalen 
-Funktion 3. Grades: 
+Allgemeine Form einer zu (0|0) punktsymmetrischen 
+ganzrationalen Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + cx  
  
@@ -35,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax
 
 2 Bedingungen: 
 
-1. Hat im Wendepunkt (0|0) die Steigung -3 bedeutet: 
+1. Hat im Wendepunkt (0|0) die Steigung -3 
+bedeutet: 
 
 f’<sub>(0)</sub> = -3 --> 
 
@@ -43,8 +44,8 @@ f’<sub>(0)</sub> = -3 -->
 
 c = -3 
 
-2. Hat an der Stelle x = 1 einen Extremwert bedeutet: 
-(c = -3 eingesetzt): 
+2. Hat an der Stelle x = 1 einen Extremwert 
+bedeutet: (c = -3 eingesetzt): 
 
 f’<sub>(1)</sub> = 0 --> 
 
