--- a/Steck_Aufgabe71.html
+++ b/Steck_Aufgabe71.html
@@ -19,12 +19,14 @@
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
 hat in (3|f(3)) eine Tangente mit der 
-Funktionsgleichung y = 11x - 27 und bei (1|0) einen 
-Wendepunkt. Wie lautet seine Funktionsgleichung?
+Funktionsgleichung y = 11x - 27 und bei (1|0) 
+einen Wendepunkt. 
+Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe71.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -56,7 +58,8 @@ a * 3<sup>3</sup> + b * 3<sup>2</sup> + c * 3 + d = 6 -->
 
 27a + 9 b + 3c + d = 6       II 
 
-3. Hat bei (1|0) einen Wendepunkt bedeutet zum einen: 
+3. Hat bei (1|0) einen Wendepunkt bedeutet zum 
+einen: 
 
 f’’<sub>(1)</sub> = 0 --> 
 
@@ -64,7 +67,8 @@ f’’<sub>(1)</sub> = 0 -->
 
 6a + 2b = 0      III 
 
-4. Hat bei (1|0) einen Wendepunkt bedeutet zum anderen:
+4. Hat bei (1|0) einen Wendepunkt bedeutet zum 
+anderen:
 
 f<sub>(3)</sub> = 0 --> 
 
