--- a/Steck_Aufgabe77.html
+++ b/Steck_Aufgabe77.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 77
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-hat bei (2|1) einen Wendepunkt und im Punkt (-1|0) 
-die Steigung 2. 
+hat bei (2|1) einen Wendepunkt und im Punkt 
+(-1|0) die Steigung 2. 
 Wie lautet seine Funktionsgleichung?
 
 <img src="Aufgabe77.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -34,7 +35,8 @@ f’’<sub>(x)</sub> = 6ax + 2b
 
 4 Bedingungen: 
 
-1. Hat bei (2|1) einen Wendepunkt bedeutet zum einen:
+1. Hat bei (2|1) einen Wendepunkt bedeutet zum 
+einen:
 
 f<sub>(2)</sub> = 1 --> 
 
@@ -42,7 +44,8 @@ a * 2<sup>3</sup> + b * 2<sup>2</sup> + c * 2 + d = 1 -->
 
 8a + 4b + 2c + d = 1         I 
 
-2. Hat bei (2|1) einen Wendepunkt bedeutet zum anderen: 
+2. Hat bei (2|1) einen Wendepunkt bedeutet zum 
+anderen: 
 
 f’’<sub>(2)</sub> = 0 --> 
 
@@ -50,7 +53,8 @@ f’’<sub>(2)</sub> = 0 -->
 
 12a + 2b = 0        II 
 
-3. Hat im Punkt (-1|0) die  Steigung 2 bedeutet zum einen: 
+3. Hat im Punkt (-1|0) die  Steigung 2 bedeutet 
+zum einen: 
 
 f<sub>(-1)</sub> = 0 --> 
 
@@ -58,7 +62,8 @@ a * (-1)<sup>3</sup> + b * (-1)<sup>2</sup> + c * (-1) + d = 0 -->
 
 -a + b - c + d = 0       III 
 
-4. Hat im Punkt (-1|0) die  Steigung 2 bedeutet zum anderen: 
+4. Hat im Punkt (-1|0) die  Steigung 2 bedeutet 
+zum anderen: 
 
 f’<sub>(-1)</sub> = 2 --> 
 
