--- a/Steck_Aufgabe78.html
+++ b/Steck_Aufgabe78.html
@@ -18,13 +18,14 @@
     <pre><p class ="Aufgabe"><b>Aufgabe 78
 
 Der Graph einer ganzrationalen Funktion 3. Grades 
-geht durch den Koordinatenursprung, hat in (4|-4/3) 
-einen Wendepunkt mit einer Steigung von 1. 
+geht durch den Koordinatenursprung, hat in 
+(4|-4/3) einen Wendepunkt mit einer Steigung von 1. 
 Wie lautet seine Funktionsgleichung? 
 
 <img src="Aufgabe78.jpg" >
 
-Allgemeine Form einer ganzrationalen Funktion 3. Grades: 
+Allgemeine Form einer ganzrationalen 
+Funktion 3. Grades: 
  
 f<sub>(x)</sub> = ax<sup>3</sup> + bx<sup>2</sup> + cx + d 
  
@@ -42,8 +43,9 @@ a * 0<sup>3</sup> + b * 0<sup>2</sup> + c * 0 + d = 0 -->
 
 d = 0 
 
-2. Hat in (4|- 4/3) einen Wendepunkt mit einer Steigung von 1 
-bedeutet erstens (d = 0 eingesetzt): 
+2. Hat in (4|- 4/3) einen Wendepunkt mit einer 
+Steigung von 1 bedeutet erstens 
+(d = 0 eingesetzt): 
 
 f<sub>(4)</sub> = -4/3 --> 
 
@@ -51,8 +53,8 @@ a * 4<sup>3</sup> + b * 4<sup>2</sup> + c * 4 = -4/3 -->
 
 64a + 16b + 4c = -4/3         I 
 
-3. Hat in (4|- 4/3) einen Wendepunkt mit einer Steigung von 1 
-bedeutet zweitens: 
+3. Hat in (4|- 4/3) einen Wendepunkt mit einer 
+Steigung von 1 bedeutet zweitens: 
 
 f’’<sub>(4)</sub> = 0 --> 
 
@@ -60,8 +62,8 @@ f’’<sub>(4)</sub> = 0 -->
 
 24a + 2b = 0        II 
 
-4. Hat in (4|- 4/3) einen Wendepunkt mit einer Steigung von 1 
-bedeutet drittens: 
+4. Hat in (4|- 4/3) einen Wendepunkt mit einer 
+Steigung von 1 bedeutet drittens: 
 
 f’(4) = 1 --> 
 
